[package]
name = "polymer-prover"
version = "1.0.3"
description = "Polymer prover program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "polymer_prover"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
hex = "0.4.3"
sha2 = "0.10.8"
sha3 = "0.10.8"
libsecp256k1 = "0.7.2"

[dev-dependencies]
mollusk-svm = "0.1.4"
serde = "1.0.219"
serde_json = "1.0.140"
solana-program = "2.1.0"
solana-sdk = "2.1.0"
