[package]
name = "proverctl"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
polymer-prover = { path = "../../programs/polymer-prover"}
anchor-lang = "0.31.0"
anyhow = "1.0.97"
solana-sdk = "2.1.0"
solana-cli-config = "2.1.0"
solana-client = "2.1.0"
clap = { version = "4.5.35", features = ["derive"] }
home = "0.5.11"
borsh = "1.5.7"
solana-transaction-status-client-types = "2.1.0"
retry = "2.0"
